deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-random
  namespace: mvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-random
  template:
    metadata:
      labels:
        app: wiki-random
    spec:
      containers:
      - name: app
        image: docker.io/zebra999/wiki_random:v0.6
        command:
        - python
        - /root/run.py
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 800m
            memory: 500Mi
