vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:  
  name: mvr-elasticsearch
  namespace: cnvrg
spec:
  gateways:
  - istio-gw-cnvrg
  hosts:
  - mvr-elasticsearch.aks-cicd-16722.cicd.cnvrg.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: elasticsearch-master.mvr.svc.cluster.local
        port:
          number: 9200
    timeout: 18000s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:  
  name: mvr-kibana
  namespace: cnvrg
spec:
  gateways:
  - istio-gw-cnvrg
  hosts:
  - mvr-kibana.aks-cicd-16722.cicd.cnvrg.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: kibana-kibana.mvr.svc.cluster.local
        port:
          number: 5601
    timeout: 18000s
